--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 asgiref==3.2.3
+dj-database-url==0.5.0
 Django==3.0.4
+django-cors-headers==3.2.1
+django-model-utils==4.0.0
 djangorestframework==3.11.0
+djangorestframework-simplejwt==4.4.0
+Pillow==7.0.0
+psycopg2==2.8.4
+PyJWT==1.7.1
 pytz==2019.3
 sqlparse==0.3.1
+whitenoise==5.0.1
